# backend/docs/swagger.json
@@ -16,7 +16,7 @@
                 ],
                 "description": "특정 대화방 삭제",
                 "tags": [
-                    "Box 페이지"
+                    "받은노트 페이지"
                 ],
                 "summary": "특정 대화방 삭제",
                 "parameters": [
@@ -76,7 +76,7 @@
                 ],
                 "description": "노트를 주고 받는 대화방 목록 조회(최대 3개)",
                 "tags": [
-                    "Box 페이지"
+                    "받은노트 페이지"
                 ],
                 "summary": "노트를 주고 받는 대화방 목록 조회(최대 3개)",
                 "parameters": [
@@ -130,7 +130,7 @@
                 ],
                 "description": "특정 친구와 주고받은 노트 목록",
                 "tags": [
-                    "Box 페이지"
+                    "받은노트 페이지"
                 ],
                 "summary": "특정 친구와 주고받은 노트 목록",
                 "parameters": [
@@ -184,7 +184,7 @@
                 ],
                 "description": "특정 노트 조회",
                 "tags": [
-                    "Box 페이지"
+                    "받은노트 페이지"
                 ],
                 "summary": "특정 노트 조회",
                 "parameters": [
@@ -250,7 +250,7 @@
                 ],
                 "description": "특정 폴더 이름 변경",
                 "tags": [
-                    "Main 페이지 - Folder"
+                    "나의노트 페이지"
                 ],
                 "summary": "특정 폴더 이름 변경",
                 "parameters": [
@@ -305,7 +305,7 @@
                 ],
                 "description": "폴더 추가",
                 "tags": [
-                    "Main 페이지 - Folder"
+                    "나의노트 페이지"
                 ],
                 "summary": "폴더 추가",
                 "parameters": [
@@ -360,7 +360,7 @@
                 ],
                 "description": "특정 폴더 삭제",
                 "tags": [
-                    "Main 페이지 - Folder"
+                    "나의노트 페이지"
                 ],
                 "summary": "특정 폴더 삭제",
                 "parameters": [
@@ -417,7 +417,7 @@
                 ],
                 "description": "존재하는 모든 폴더 목록 조회",
                 "tags": [
-                    "Main 페이지 - Folder"
+                    "나의노트 페이지"
                 ],
                 "summary": "존재하는 모든 폴더 목록 조회",
                 "parameters": [
@@ -471,7 +471,7 @@
                 ],
                 "description": "내가 쓴 특정 노트 삭제",
                 "tags": [
-                    "Main 페이지 - Note"
+                    "나의노트 페이지"
                 ],
                 "summary": "내가 쓴 특정 노트 삭제",
                 "parameters": [
@@ -528,7 +528,7 @@
                 ],
                 "description": "노트가 저장되는 폴더 변경",
                 "tags": [
-                    "Main 페이지 - Note"
+                    "나의노트 페이지"
                 ],
                 "summary": "노트가 저장되는 폴더 변경",
                 "parameters": [
@@ -585,7 +585,7 @@
                 ],
                 "description": "특정 폴더에 존재하는 모든 노트 조회",
                 "tags": [
-                    "Main 페이지 - Note"
+                    "나의노트 페이지"
                 ],
                 "summary": "특정 폴더에 존재하는 모든 노트 조회",
                 "parameters": [
@@ -636,6 +636,120 @@
                 }
             }
         },
+        "/opennote/list": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "사용자 키워드 기반으로 오픈노트에 공유된 노트 목록 조회",
+                "tags": [
+                    "오픈노트 페이지"
+                ],
+                "summary": "사용자 키워드 기반으로 오픈노트에 공유된 노트 목록 조회",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "uid",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.OpenNoteListResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "요청에 포함된 파라미터 값이 잘못된 경우입니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response400"
+                        }
+                    },
+                    "401": {
+                        "description": "인증에 실패한 경우이며, 실패 사유가 전달됩니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response401"
+                        }
+                    },
+                    "404": {
+                        "description": "요청한 리소스가 서버에 존재하지 않는 경우입니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response404"
+                        }
+                    },
+                    "500": {
+                        "description": "요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response500"
+                        }
+                    }
+                }
+            }
+        },
+        "/opennote/show": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "특정 오픈노트 조회",
+                "tags": [
+                    "오픈노트 페이지"
+                ],
+                "summary": "특정 오픈노트 조회",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "note id",
+                        "name": "nid",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "conversation id",
+                        "name": "cid",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.NoteInfo"
+                        }
+                    },
+                    "400": {
+                        "description": "요청에 포함된 파라미터 값이 잘못된 경우입니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response400"
+                        }
+                    },
+                    "401": {
+                        "description": "인증에 실패한 경우이며, 실패 사유가 전달됩니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response401"
+                        }
+                    },
+                    "404": {
+                        "description": "요청한 리소스가 서버에 존재하지 않는 경우입니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response404"
+                        }
+                    },
+                    "500": {
+                        "description": "요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response500"
+                        }
+                    }
+                }
+            }
+        },
         "/profile/duplicate": {
             "get": {
                 "security": [
@@ -645,7 +759,7 @@
                 ],
                 "description": "회원 가입 시 ID 중복 체크",
                 "tags": [
-                    "Profile 페이지"
+                    "SignUp/SignIn 페이지"
                 ],
                 "summary": "회원 가입 시 ID 중복 체크",
                 "parameters": [
@@ -699,7 +813,7 @@
                 ],
                 "description": "로그인 요청",
                 "tags": [
-                    "Profile 페이지"
+                    "SignUp/SignIn 페이지"
                 ],
                 "summary": "로그인 요청",
                 "parameters": [
@@ -756,7 +870,7 @@
                 ],
                 "description": "회원 가입 요청",
                 "tags": [
-                    "Profile 페이지"
+                    "SignUp/SignIn 페이지"
                 ],
                 "summary": "회원 가입 요청",
                 "parameters": [
@@ -813,7 +927,7 @@
                 ],
                 "description": "전체 폴더를 대상으로 노트 내용 검색",
                 "tags": [
-                    "Main 페이지 - Search"
+                    "나의노트 페이지"
                 ],
                 "summary": "전체 폴더를 대상으로 노트 내용 검색",
                 "parameters": [
@@ -864,6 +978,60 @@
                 }
             }
         },
+        "/search/opennote": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "전체 폴더를 대상으로 노트 내용 검색",
+                "tags": [
+                    "오픈노트 페이지"
+                ],
+                "summary": "전체 폴더를 대상으로 노트 내용 검색",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "query for search",
+                        "name": "query",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.OpenNoteListResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "요청에 포함된 파라미터 값이 잘못된 경우입니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response400"
+                        }
+                    },
+                    "401": {
+                        "description": "인증에 실패한 경우이며, 실패 사유가 전달됩니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response401"
+                        }
+                    },
+                    "404": {
+                        "description": "요청한 리소스가 서버에 존재하지 않는 경우입니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response404"
+                        }
+                    },
+                    "500": {
+                        "description": "요청을 처리하는 과정에서 서버에 문제가 발생한 경우입니다",
+                        "schema": {
+                            "$ref": "#/definitions/restapi.Response500"
+                        }
+                    }
+                }
+            }
+        },
         "/search/top": {
             "get": {
                 "security": [
@@ -873,7 +1041,7 @@
                 ],
                 "description": "전체 폴더를 대상으로 노트 내용 검색",
                 "tags": [
-                    "Main 페이지 - Search"
+                    "나의노트 페이지"
                 ],
                 "summary": "전체 폴더를 대상으로 노트 내용 검색",
                 "parameters": [
@@ -933,7 +1101,7 @@
                 ],
                 "description": "내가 쓴 노트를 오픈 노트에 공유하기",
                 "tags": [
-                    "Write 페이지"
+                    "나의노트 페이지"
                 ],
                 "summary": "내가 쓴 노트를 오픈 노트에 공유하기",
                 "parameters": [
@@ -988,11 +1156,11 @@
                         "BasicAuth": []
                     }
                 ],
-                "description": "내가 쓴 노트를 랜덤 매칭을 통해 (비슷한 관심 주제를 갖는)임의의 대상의 노트로 보내기",
+                "description": "내가 쓴 노트를 랜덤 매칭을 통해 (비슷한 관심 주제를 갖는)임의의 대상에게 보내기",
                 "tags": [
-                    "Write 페이지"
+                    "나의노트 페이지"
                 ],
-                "summary": "내가 쓴 노트를 랜덤 매칭을 통해 (비슷한 관심 주제를 갖는)임의의 대상의 노트로 보내기",
+                "summary": "내가 쓴 노트를 랜덤 매칭을 통해 (비슷한 관심 주제를 갖는)임의의 대상에게 보내기",
                 "parameters": [
                     {
                         "description": "랜덤 매칭을 통해 보낼 노트 정보",
@@ -1047,7 +1215,7 @@
                 ],
                 "description": "내가 쓴 노트 갱신",
                 "tags": [
-                    "Write 페이지"
+                    "나의노트 페이지"
                 ],
                 "summary": "내가 쓴 노트 갱신",
                 "parameters": [
@@ -1102,7 +1270,7 @@
                 ],
                 "description": "내가 쓴 노트 저장",
                 "tags": [
-                    "Write 페이지"
+                    "나의노트 페이지"
                 ],
                 "summary": "내가 쓴 노트 저장",
                 "parameters": [
@@ -1159,7 +1327,7 @@
                 ],
                 "description": "내가 쓴 노트를 특정 대상에게 보내기",
                 "tags": [
-                    "Write 페이지"
+                    "나의노트 페이지"
                 ],
                 "summary": "내가 쓴 노트를 특정 대상에게 보내기",
                 "parameters": [
@@ -1216,7 +1384,7 @@
                 ],
                 "description": "내가 쓴 노트 조회",
                 "tags": [
-                    "Write 페이지"
+                    "나의노트 페이지"
                 ],
                 "summary": "내가 쓴 노트 조회",
                 "parameters": [
@@ -1515,6 +1683,42 @@
                 },
                 "title": {
                     "description": "해당 폴더에 존재하는 노트의 제목",
+                    "type": "string",
+                    "example": "my first note"
+                }
+            }
+        },
+        "restapi.OpenNoteListResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/restapi.OpenNoteSimpleInfo"
+                    }
+                }
+            }
+        },
+        "restapi.OpenNoteSimpleInfo": {
+            "type": "object",
+            "properties": {
+                "conversation_id": {
+                    "type": "string",
+                    "example": "1afc571d-61bf-4cef-95ce-ab791f999297"
+                },
+                "note_id": {
+                    "type": "string",
+                    "example": "09d05df1-2958-4a3d-b910-3b4fb079327b"
+                },
+                "post_at": {
+                    "type": "string",
+                    "example": "2023-12-19 15:55:48"
+                },
+                "preview": {
+                    "type": "string",
+                    "example": "This is the main text of my first wavy note."
+                },
+                "title": {
                     "type": "string",
                     "example": "my first note"
                 }
